# tfg

./: .gitignore  add_docstrings.py  line_counter.sh  requirements.txt
docs/: HRI PROTOCOL.txt  OpenAPI Documentation.html  ROS2WEB PROTOCOL.txt  TODO.txt  install.md  openapi.json  pythonlibraries.txt
face_code/: user.cpp
mouth_code/: user.cpp
ros2_ws/src/face_controller/: CMakeLists.txt  package.xml
ros2_ws/src/face_controller/src/: face_node.cpp
ros2_ws/src/hri_audio/: package.xml  setup.cfg  setup.py
ros2_ws/src/hri_audio/hri_audio/: _assistant_helper_new_idea.py  assistant.py  assistant_helper.py  assistant_helper_node.py  assistant_node.py  audio_node.py  google_stt.py  hri_tts.py  microphone_node.py  microphone_publisher.py  python_tts.py  speaker_controller.py  stt_node.py  test.py  tts_node.py  whisper_stt.py  wisper.py
ros2_ws/src/hri_audio/hri_audio/_old/: assistant.py  assistant_llm.py  audio_direction copy.py  audio_direction.py  sound_localizer.py  test.py  test_microfono_parametros.py
ros2_ws/src/hri_audio/hri_audio/api/: gstt.py  gtts.py  sound.py  sounds.py  text_to_speech_pyttsx3.py
ros2_ws/src/hri_audio/hri_audio/old/: audio_direction copy.py
ros2_ws/src/hri_audio/hri_audio/tests/: test_hotword.py
ros2_ws/src/hri_audio/hri_audio/tts/: __init__.py  bark_tts.py  coqui_multi_tts.py  coqui_single_tts.py  css10_tts.py  google_tts.py  gtts.py  piper_tts.py  tacotron2_tts.py  xtts.py  your_tts.py
ros2_ws/src/hri_audio/hri_audio/tts/models/: es_ES-davefx-medium.onnx.json  es_ES-sharvard-medium.onnx.json
ros2_ws/src/hri_audio/hri_audio/utils/: __init__.py  chunk_attach_criterion.py  gtranslate.py  intensity_attach_criterion.py  model_hotword.py  pvporcupine_hotword.py  silero_vad_attach_criterion.py  sound.py  sounds.py  stt_hotword.py
ros2_ws/src/hri_audio/hri_audio/utils/models/: sancho_linux_uedge.ppn
ros2_ws/src/hri_audio/launch/: audio_launch.py  cloud_audio_launch.py  cloud_mic_audio_launch.py  local_audio_launch.py  sancho_cloud_mic_audio_launch.py  the_launch.py  the_no_launch.py  uedge_cloud_mic_audio_launch.py  web_audio_launch.py  web_audio_launch_local.py  web_audio_launch_total.py  web_audio_launch_uedge.py  web_audio_local_launch.py  web_audio_total_launch.py  web_audio_total_local_launch.py  web_audio_uedge_launch.py
ros2_ws/src/hri_audio/test/: test_copyright.py  test_hotword.py  test_pep257.py
ros2_ws/src/mouth_controller/: CMakeLists.txt  package.xml
ros2_ws/src/mouth_controller/src/: mouth_node.cpp
sandbox/: english_latex.py  http_server.py  mp4_websocket.py  video_mjpeg.html  video_mjpeg.py  video_websocket.py  websocket_client.html  websocket_server.py
sandbox/llm/: build_command_db.py  deepseek_text.py  emb_classify_prompt.py  gpt_classify_prompt.py  sentiment.py  test_gemini.py
sandbox/models/: TTSModel.py  bark_tts.py  piper_tts.py  tts_model.py  xtts.py
sandbox/qt/: main.py
sandbox/vision/: test_detector.py  test_work_decoder.py  (+2 more)
tests/: http_server.py  video.py  video_websocket.html  websocket_client.html  websocket_client.py  websocket_server.py
web_interface/: index.html  package-lock.json  package.json
(+537 files in other folders)
