<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_audio</name>
  <version>0.0.0</version>
  <description>Audio processing nodes for speech interaction</description>
  <maintainer email="euquemada@gmail.com">eulogioqt</maintainer>
  <license>Apache-2.0</license>

   <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-opencv</exec_depend>
  <!-- <exec_depend>python-keras-facenet</exec_depend> -->
  <exec_depend>python-tensorflow-pip</exec_depend>
  <exec_depend>python-dlib</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>interbotix_xs_msgs</exec_depend> -->
  <exec_depend>human_face_recognition_msgs</exec_depend>

  <exec_depend>hri_msgs</exec_depend>
  <exec_depend>llm_tools</exec_depend>
  <exec_depend>sancho_ai</exec_depend>
  <exec_depend>sancho_web</exec_depend>
  <exec_depend>speech_msgs</exec_depend>
  <exec_depend>speech_tools</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
